`ui-button`: Fix an issue where icons would remain visible while a button is reacting

--- a/src/assets/css/buttons.css
+++ b/src/assets/css/buttons.css
@@ -1,6 +1,6 @@
 @layer components {
 	.button {
-		@apply px-4 py-2 rounded-lg;
+		@apply px-[1em] py-[0.5em] rounded-lg;
 	}
 
 	.button--primary {
